# mcp-observability

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mcp-obs.yml  mypy.ini  pyproject.toml
.cursor/rules/: mcp-observability.mdc
.github/workflows/: ci.yml  dashboard-lint.yml  docker-build.yml  drift-check.yml  helm-ci.yml  helm-package.yml  integration-test.yml
app/: clients.py  config.py  grpc_server.py  initialize.py  main.py  manifest.py  mcp_server.py  otel_setup.py  prompt_store.py  prompts.py  resource_store.py  resources.py  sampling.py  security.py
app/prompts/: greet.yaml  troubleshoot_latency.yaml
app/routers/: alerts.py  logs.py  metrics.py  traces.py
charts/mcp-obs/: Chart.yaml  values.yaml
docs/: Docker Getting Started.md  NextJS Observability Guide.md  Project CI.md  Python Observability Guide.md  Using for local development.md  Working within an existing environment.md  dashboards.md  doc_audit_2025-06-18.md  mcp-observability-prd.md  orchestration_prompt.md  security_tls.md
docs/archive/: observability.md
docs/contributing/: architecture-overview.md  ci.md  dev-setup.md  faq.md  file-layout.md  index.md  workflow.md
docs/guides/: cloud-deployment.md  docker.md  external-stack.md  (+2 more)
mcp_observability/: __init__.py  schemas.py
otel/: collector-config.yaml
prometheus/: alert-rules.yaml
scripts/: close_epics.sh  doc_inventory.py  entrypoint.sh  fetch_dashboards.py  gh-progress.sh
tests/: test_alerts.py  test_auth.py  test_grpc_server.py  test_health.py  test_initialize.py  test_latency.py  test_logs.py  test_logs_search.py  test_manifest.py  test_metrics.py  test_metrics_query.py  test_opentelemetry_tracing.py  test_prompts.py  test_resources.py  test_sampling.py  test_schemas.py  test_tls.py  test_traces.py
(+24 files in other folders)
