[tool.poetry]
name = "mcp-observability"
version = "0.1.0"
description = "MCP Observability FastAPI service"
authors = ["Patrick McFadin <pmcfadin@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.2"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api" 