[tool.poetry]
name = "mcp-observability"
version = "0.1.0"
description = "MCP Observability FastAPI service"
authors = ["Patrick McFadin <pmcfadin@example.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "mcp_observability" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
mcp = { extras = ["cli"], version = "^1.9.4" }
grpcio = "^1.62.0"
# OpenTelemetry for tracing & metrics
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-httpx = "^0.46b0"
jinja2 = "^3.1.3"
openai = { version = "^1.23.5", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.2"
httpx = "^0.27.0"
trustme = "^1.1.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.8.0"
pyyaml = "^6.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api" 